Limiting heading image to prevent layout issues

--- a/source/_assets/sass/episode/content-heading.scss
+++ b/source/_assets/sass/episode/content-heading.scss
@@ -4,6 +4,7 @@
   &__image {
     width: 100%;
     height: auto;
+    max-height: 200px;
     border-radius: 5px;
   }
 
